--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>em busca da cidade perdida</title>
 </head
-<link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
@@ -13,6 +13,7 @@
 <body>
     <main>
         <div class="passo" id="passo-0"
+         <img src="cenario-passo0.png" alt="">
         <p>Um dia desses, dentro de um livro da biblioteca da escola, descobri uma carta antiga sobre uma cidade perdida, escondida por riquezas e belezas naturais. Nessa carta, a autora deixa algumas pistas para encontrar essa cidade e eu decidi segui-las!</p>
     <botton class="btn-proximo" data-proximo = "1"> Rio de janeiro </botton>
     <botton class="btn-proximo" data-proximo = "2"> Pernambuco </botton>
@@ -23,5 +24,6 @@
     <botton class="btn-proximo" data-proximo = "4"> Desistir e voltar para casa </botton>
     </div>
     </main>
+    <script>src="script.js" </script>
 </body>
 </html>
